--- a/playlist.css
+++ b/playlist.css
@@ -14,6 +14,9 @@
 
 .top-bar {
   background-color: #f9f9f9; // almost white
+  border-bottom-width: 1px;
+  border-bottom-color: #b9b3c3;
+  border-bottom-style: solid;
 }
 
 .top-bar > ul {
@@ -23,12 +26,12 @@
 
 .top-bar-button-icon {
   text-align: center;
-  margin: 5px;
   overflow : auto;
 }
 
 .top-bar-button-icon > span {
   display : block;
+  margin: 2px;
 }
 .active .top-bar-button-icon-glyph {
   color : #810082; // dark purple
@@ -37,9 +40,11 @@
   color : #820054;
 }
 .top-bar-button-icon-glyph {
+  font-size: 150%;
   color : #333333; // dark grey
 }
 .top-bar-button-icon-text {
+  font-size: 75%;
   color : #8c8c8c; // light grey
 }
 
