--- a/playlist.css
+++ b/playlist.css
@@ -1,9 +1,3 @@
-.container{
-  //font-size: 300%;
-  margin: 0;
-  padding: 0;
-}
-
 .songs, .playlists, .search {
     display: none;
 }
@@ -13,7 +7,7 @@
 }
 
 .top-bar {
-  background-color: #f9f9f9; // almost white
+  background-color: #f9f9f9;
   text-align: center;
 }
 
@@ -39,20 +33,36 @@
   margin: 2px;
 }
 .active .top-bar-button-icon-glyph {
-  color : #810082; // dark purple
+  color : #810082;
 }
 .active .top-bar-button-icon-text {
   color : #820054;
 }
 .top-bar-button-icon-glyph {
   font-size: 150%;
-  color : #333333; // dark grey
+  color : #333333;
 }
 .top-bar-button-icon-text {
   font-size: 75%;
-  color : #8c8c8c; // light grey
+  color : #8c8c8c;
 }
 
 .playlists {
-  background: #E8E0F4; // light purple
+  background-color: #E8E0F4;
+  text-align: center;
+  overflow-y: auto;
+}
+
+.playlists-item {
+  display:block;
+}
+
+#new-playlist-button {
+  border:0px;
+  padding: 8px;
+  margin: 8px;
+  border-radius: 5px;
+  width:95%;
+  background-color: #936ac7;
+  color: white;
 }
