--- a/playlist.css
+++ b/playlist.css
@@ -47,7 +47,7 @@
   color : #8c8c8c;
 }
 
-#playlist-view {
+#content-view {
   background-color: #E8E0F4;
   text-align: center;
   overflow: scroll;
