--- a/playlist.css
+++ b/playlist.css
@@ -72,7 +72,7 @@
   padding:0px;
 }
 
-.playlist {
+.music-item {
   display:block;
   height: 75px;
   border-bottom-width: 1px;
@@ -87,11 +87,11 @@
   padding-right: 30px;
 
 }
-.playlist:active {
+.music-item:active {
   background-color: #cac3d5;
 }
 
-.playlist-icon {
+.music-cover-thumbnail {
   float: left;
   border-width: 1px;
   border-style: solid;
@@ -100,7 +100,7 @@
   height: 40px;
   background-color: #d8d8d8;
 }
-.playlist-name {
+.music-title {
   color: #835797;
 }
 .playlist-expand-button {
