--- a/playlist.css
+++ b/playlist.css
@@ -68,6 +68,9 @@ html, body {
   color: white;
   display:inline-block;
 }
+.purple-button:active {
+  box-shadow: inset 3px 3px pink;
+}
 .playlist-content-title {
   color: #835797;
   font-size: 200%;
@@ -172,16 +175,20 @@ html, body {
   margin: 30px;
   display: block;
 }
-.content-view-button-bar {
+.content-view-flex-row {
   display: flex;
   flex-direction: row;
-  margin-left: 10%;
-  margin-right: 10%;
+  margin-left: 5%;
+  margin-right: 5%;
 }
-.content-view-button {
+.content-view-flex-row-item {
   flex-grow: 1;
   margin: 10px;
 }
-.content-view-button:active {
-  box-shadow: inset 3px 3px white;
+.search-bar {
+  resize: none;
+  background-color: #e0e0e0;
+  border-radius: 5px;
+  color: #808080;
+  border: 1px solid #808080;
 }
