--- a/playlist.css
+++ b/playlist.css
@@ -181,7 +181,7 @@ html, body {
   flex-grow: 1;
   margin: 10px;
 }
-.search-bar {
+.text-input-bar {
   resize: none;
   background-color: #e0e0e0;
   border-radius: 5px;
@@ -190,4 +190,16 @@ html, body {
 }
 .error-text {
   color: red;
+}
+
+.flex-row {
+  display: flex;
+  flex-direction: row;
+}
+.flex-column {
+  display: flex;
+  flex-direction: column;
+}
+.flex-item {
+  flex: 1;
 }
